停电前提交

--- a/gmjjshfz.html
+++ b/gmjjshfz.html
@@ -634,7 +634,7 @@
                 <button
                     class="bg-primary/20 hover:bg-primary/30 text-primary px-3 py-1 rounded-lg transition-colors btn-click text-sm"
                     id="fullscreen-btn">
-                    <i class="fa fa-expand mr-1"></i>全屏
+                    <i class="fa fa-expand mr-1"></i>全屏展示
                 </button>
                 <button
                     class="bg-success/20 hover:bg-success/30 text-success px-3 py-1 rounded-lg transition-colors btn-click text-sm">
@@ -1611,7 +1611,7 @@
             if (isFullscreen) {
                 fullscreenBtn.innerHTML = '<i class="fa fa-compress mr-1"></i>退出全屏';
             } else {
-                fullscreenBtn.innerHTML = '<i class="fa fa-expand mr-1"></i>全屏';
+                fullscreenBtn.innerHTML = '<i class="fa fa-expand mr-1"></i>全屏展示';
             }
         }
 
