--- a/gmjjshfz.html
+++ b/gmjjshfz.html
@@ -1261,7 +1261,7 @@
                             <h3 class="text-lg font-semibold">主要财政金融指标增长率</h3>
                             <div class="text-xs text-gray-400">2023-2024年同比增长率 单位:%</div>
                         </div>
-                        <div class="h-[400px]">
+                        <div class="h-[350px]">
                             <canvas id="growthRateChart"></canvas>
                         </div>
                     </div>
@@ -1405,11 +1405,11 @@
     </button>
 
     <!-- 页脚 -->
-    <footer class="bg-dark/80 backdrop-blur-md border-t border-primary/20 py-3">
+     <!-- <footer class="bg-dark/80 backdrop-blur-md border-t border-primary/20 py-3">
         <div class="px-1 text-center text-gray-400 text-xs">
             <p>© 2025 岷县大数据中心 | 领导决策支持系统 | 数据更新时间：<span id="footer-update-time">2025-07-29 10:30:00</span></p>
         </div>
-    </footer>
+    </footer> -->
 
     <!-- JavaScript -->
     <script>
